Internalize destination device list/registration ID checks in `MessageSender`